# ESP32-Environmental-Monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  setup.bat
config/: partitions.csv  settings.template.jsonc
main/: CMakeLists.txt  main.cpp  main.hpp
main/core/: I2CManager.cpp  calibration.hpp  config_manager.cpp  core.hpp  health_monitor.cpp  health_monitor.hpp  json_config_provider.cpp  json_config_provider.hpp  rtos_manager.cpp  rtos_manager.hpp  sensor_registry.cpp  sensor_registry.hpp
main/managers/: I2CManager.hpp  SensorManager.cpp  SensorManager.hpp  config_manager.cpp  config_manager.hpp  rtos_manager.cpp  rtos_manager.hpp  sensor_registry.cpp
main/network/: health_server.cpp  health_server.hpp  http_client.c  http_client.h  http_server.c  http_server.h  secure_credentials.c  secure_credentials.h  sntp_manager.c  sntp_manager.h  wifi_manager.c  wifi_manager.h
main/sensors/: AHT21Sensor.cpp  AHT21Sensor.hpp  ENS160Sensor.cpp  ENS160Sensor.hpp  ISensor.hpp
main/test/: cmock_config.h  test_main.c  test_result_tracker.c
main/test/mocks/: mockI2cFunctions.c  mockI2cFunctions.h  mockWifiFunctions.c  mockWifiFunctions.h
main/test/network/: test_http_client.c
test/: CMakeLists.txt  Makefile  README.md  native_test_runner.c  run_all_tests.bat  run_native_tests_msvc.bat  run_tests_simple.bat  sdkconfig.defaults
test/unit/: test_main.c  test_result_tracker.h
test/unit/core/: test_config_manager.c  test_health_monitor.c
test/unit/mocks/: mockI2cFunctions.c  mockI2cFunctions.h  mockWifiFunctions.c  mockWifiFunctions.h
test/unit/network/: test_wifi_manager.c
test/unit/sensors/: test_sensor_health.c
